--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -64,7 +64,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "datosar = pandas.read_csv(\"../datos/casosar.csv\")\n",
+    "datosar = pandas.read_csv(\"../data/casosar.csv\")\n",
     "\n",
     "fig, axs = plt.subplots(1,2,figsize=(16,8))\n",
     "ax = axs[0]\n",
