--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -275,7 +275,7 @@
     "            return obj.tolist()\n",
     "        return json.JSONEncoder.default(self, obj)\n",
     "\n",
-    "with open(\"../Datos/data.json\",\"w\") as f:\n",
+    "with open(\"../data/data.json\",\"w\") as f:\n",
     "    f.write(json.dumps(nodes, sort_keys=True,cls=NumpyEncoder))\n",
     "\n"
    ]
