--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -481,6 +481,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+       "    require(\n",
+       "        ['base/js/namespace', 'jquery'], \n",
+       "        function(jupyter, $) {\n",
+       "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+       "                console.log(\"Auto-running all cells-below...\");\n",
+       "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+       "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+       "            });\n",
+       "        }\n",
+       "    );\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<script>\n",
+    "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+    "    require(\n",
+    "        ['base/js/namespace', 'jquery'], \n",
+    "        function(jupyter, $) {\n",
+    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+    "                console.log(\"Auto-running all cells-below...\");\n",
+    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+    "            });\n",
+    "        }\n",
+    "    );\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -503,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
