mejora del calculo

--- a/Bajar Datos.ipynb
+++ b/Bajar Datos.ipynb
@@ -331,7 +331,7 @@
      "end_time": "2020-08-13T16:13:32.869859Z",
      "start_time": "2020-08-13T16:13:32.516074Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true,
     "scrolled": false
    },
@@ -413,29 +413,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evolución de la tasa de infección y tiempo característico.\n",
+    "## Evolución de  $R_0$.\n",
     "\n",
-    "La tasa de infección es, en el modelo SIR, el factor que relaciona el incremento diario del número de casos activos con el producto del número actual de casos activos y la fracción de la población susceptible. En el modelo SIR convencional, esta cantidad es una \"constante\" que depende tanto a la \"contagiosidad\" (cuan probable es que la infección salte de un individuo a otro que se encuentran en condiciones normales) como a las políticas sanitarias. Una aislación completa de todos los individuos (sanos e infectados) debería llevar a esta cantidad a cero, pero también lo puede hacer la evolución natural del virus (degradación genómica).   \n",
+    "Un parámetro importante que caracteriza la propagación de la enfermedad es el $r_0$, definido como el número medio de contagios que produce cada individuo infectado. Esta cantidad puede estimarse, de acuerdo al modelo SEIR, según\n",
+    "$$\n",
+    "r_0=\\frac{\\Delta C}{I}\n",
+    "$$\n",
+    "con $\\Delta C$ el cambio diario en el número de casos confirmados, e $I$ el número de infectados activos. \n",
     "\n",
-    "Para analizar la hipótesis de que la degradación genómica controla la dinámica de esta variable, vamos a graficar el tiempo característico asociado, y lo vamos a ajustar con una ley exponencial. Si el tiempo característico de relajación  de la tasa de infección se mantiene invariante en muchos contextos distintos, podemos asumir que ese tiempo característico está controlado más fuertemente por la degradación genómica que por las políticas y hábitos de las poblaciones.\n"
+    "$r_0$ es una cantidad que depende de la población susceptible, de la contagiosidad de la enfermedad, así como de diferentes prácticas culturales, aspectos genéticos de la población, y de las políticas sanitarias. \n",
+    "\n",
+    "La infección puede darse por \"controlada\", si el tiempo característico $\\tau=\\frac{\\ln(2)}{R_0}$ resulta mayor al tiempo de recuperación, de manera que los nuevos infectados no llegen a remplazar a los pacientes recuperados. Para el caso del COVID19, el tiempo de recuperación es de alrededor de 20 días, por lo que si $\\tau$ es menor que ese valor, es de esperarse un crecimiento exponencial en el número de infectados activos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-13T16:13:52.407789Z",
-     "start_time": "2020-08-13T16:13:51.950573Z"
+     "end_time": "2020-08-13T16:57:14.242418Z",
+     "start_time": "2020-08-13T16:57:13.780115Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "277cc46ded9a401f9e89b818a7f0aeda",
+       "model_id": "87d8a46f39f74acf9bdebd7c533ceca2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,10 +464,10 @@
     "    newrecovered = data_recovered[1:]-data_recovered[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
     "    newdeaths = data_deaths[1:]-data_deaths[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
     "    newinfected = data_confirmed[1:]-data_confirmed[:-1]\n",
-    "    newactivos = activos[1:]-activos[:-1]\n",
+    "    newconfirmed = data_confirmed[1:]-data_confirmed[:-1]\n",
     "    ts = np.array(range(len(newinfected)))\n",
     "    \n",
-    "    values = newinfected/activos[1:]\n",
+    "    values = newconfirmed/activos[1:]\n",
     "    ts = ts[start:end]\n",
     "    values = values[start:end]    \n",
     "    ts = ts[(~np.isnan(values))]\n",
@@ -470,9 +476,10 @@
     "    values = np.log(2)/values[values>0]\n",
     "    lnvalues = np.log(values)        \n",
     "    plt.scatter(ts, values, label=region)\n",
+    "    plt.plot(ts,0*ts+21.,ls=\"-.\")\n",
     "    try:\n",
     "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
-    "        print(\"Tiempo característico :\", fit[0], \" ordenada al origen:\",np.exp(fit[1]))\n",
+    "        print(\"Tiempo característico :\", 1/fit[0], \"dias.  Ordenada a t_0:\",np.exp(fit[1]))\n",
     "        plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
     "    except:\n",
     "        pass\n",
