--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -75,7 +75,7 @@
     "import pandas\n",
     "\n",
     "\n",
-    "datosar = pandas.read_csv(\"data/casosar.csv\")\n",
+    "datosar = pandas.read_csv(\"../data/casosar.csv\")\n",
     "\n",
     "fig, axs = plt.subplots(1,2,figsize=(16,8))\n",
     "ax = axs[0]\n",
@@ -295,7 +295,7 @@
     "            return obj.tolist()\n",
     "        return json.JSONEncoder.default(self, obj)\n",
     "\n",
-    "with open(\"data/data.json\",\"w\") as f:\n",
+    "with open(\"../data/data.json\",\"w\") as f:\n",
     "    f.write(json.dumps(nodes, sort_keys=True,cls=NumpyEncoder))\n",
     "\n",
     "\n",
