actualizacion datos argentinos e interface

--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -60,7 +60,9 @@
    "source": [
     "%matplotlib inline\n",
     "import warnings\n",
+    "from IPython.display import HTML\n",
     "warnings.filterwarnings('ignore')\n",
+    "import ipywidgets as widgets\n",    
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
