--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "countries={\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Argentina\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
+    "countries={\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Argentina\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
     "\n",
     "nodes = {}\n",
     "\n",
