--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:25.043879Z",
@@ -45,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f87def2068144b548e12a1f64b802869",
+       "model_id": "a660fcd0dfda42448605371181e44d76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     "import warnings\n",
     "from IPython.display import HTML\n",
     "warnings.filterwarnings('ignore')\n",
-    "import ipywidgets as widgets\n",    
+    "import ipywidgets as widgets\n",
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -133,18 +133,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University)"
+    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University + Wikipedia)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [
@@ -168,6 +168,13 @@
     "data_recovered_by_region =  pandas.read_csv(\"https://data.humdata.org/hxlproxy/api/data-preview.csv?url=https%3A%2F%2Fraw.githubusercontent.com%2FCSSEGISandData%2FCOVID-19%2Fmaster%2Fcsse_covid_19_data%2Fcsse_covid_19_time_series%2Ftime_series_covid19_recovered_global.csv&filename=time_series_covid19_recovered_global.csv\")\n",
     "data_deaths_by_region =     pandas.read_csv(\"https://data.humdata.org/hxlproxy/api/data-preview.csv?url=https%3A%2F%2Fraw.githubusercontent.com%2FCSSEGISandData%2FCOVID-19%2Fmaster%2Fcsse_covid_19_data%2Fcsse_covid_19_time_series%2Ftime_series_covid19_deaths_global.csv&filename=time_series_covid19_deaths_global.csv\")\n",
     "\n",
+    "\n",
+    "data_infected_arg_by_region =   pandas.read_csv(\"../data/covid19-argentina-confirmed.csv\")\n",
+    "data_recovered_arg_by_region =  pandas.read_csv(\"../data/covid19-argentina-recovered.csv\")\n",
+    "data_deaths_arg_by_region =     pandas.read_csv(\"../data/covid19-argentina-deaths.csv\")\n",
+    "\n",
+    "\n",
+    "\n",
     "populations = pandas.read_csv(\"https://raw.githubusercontent.com/datasets/population/master/data/population.csv\")\n",
     "populations[populations[\"Country Name\"]==\"United States\"]\n",
     "populations=populations.append({\"Country Name\":\"US\",\"Country Code\":\"USA\", \"Year\":2020,\"Value\":323127513.},ignore_index=True )\n",
@@ -179,6 +186,41 @@
     "countries={\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Argentina\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
     "\n",
     "nodes = {}\n",
+    "\n",
+    "argprovinces= (\"Argentina\", \n",
+    "    \"Buenos Aires\", \"Catamarca\", \"Chaco\", \"Chubut\", \"Córdoba\", \"Corrientes\",\n",
+    "    \"Entre Ríos\", \"Formosa\", \"Jujuy\", \"La Pampa\", \"La Rioja\", \n",
+    "    \"Mendoza\", \"Misiones\", \"Neuquén\", \n",
+    "    \"Río Negro\", \"Salta\", \"San Juan\", \"San Luis\", \"Santa Cruz\", \"Santa Fe\", \"Santiago del Estero\", \n",
+    "    \"Tierra del Fuego\",\n",
+    "    \"Tucumán\",\n",
+    "    \"CABA\"\n",
+    "              )\n",
+    "\n",
+    "for province in argprovinces:\n",
+    "    nodename = province\n",
+    "    if nodename == \"Argentina\":\n",
+    "        nodename = \"Argentina-total\"\n",
+    "    else:\n",
+    "        nodename = \"Argentina-\"+nodename\n",
+    "    nodes[nodename]={\"coordinates\":(0,0),\n",
+    "                    \"population\": 4000000,\n",
+    "                    \"initial_infected\": None,\n",
+    "                    \"initial_day\" : 125,\n",
+    "                    \"aexp\":None,\n",
+    "                    \"err_aexp\": None,\n",
+    "                    \"initial_immunized\":0,\n",
+    "                    \"peak\": None,\n",
+    "                    \"tinc\" : None,\n",
+    "                    \"curve_confirmed\": data_infected_arg_by_region[province].to_numpy(),\n",
+    "                    \"curve_recovered\": data_recovered_arg_by_region[province].to_numpy(),                                        \n",
+    "                    \"curve_deaths\": data_deaths_arg_by_region[province].to_numpy(),                                        \n",
+    "                    }\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    data_infected_arg_by_region\n",
+    "\n",
     "\n",
     "for country in countries:\n",
     "    data_infected_country = data_infected_by_region[data_infected_by_region[\"Country/Region\"]==country]\n",
@@ -351,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -361,22 +403,7 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00f736f0ff1b4ae4bfbc4d74203d3b36",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Spain', 'Russia', 'South Africa', 'Australia-A…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
@@ -454,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -467,12 +494,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "549e912f9a314a5cb49373e4391629bb",
+       "model_id": "fd987587ec404ef480a313d723bc4d83",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Spain', 'Russia', 'South Africa', 'Australia-A…"
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina-total', 'Argentina-Buenos Aires', 'A…"
       ]
      },
      "metadata": {},
@@ -565,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
