--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -25,115 +25,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curvas en Argentina\n",
-    "\n",
-    "La actualización de estos datos es manual, por lo que sólo se actualizan cada cierto tiempo, de acuerdo a los reportes del ministerio de salud publicados en wikipedia (https://en.wikipedia.org/wiki/Template:COVID-19_pandemic_data/Argentina_medical_cases)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-13T16:12:25.043879Z",
-     "start_time": "2020-08-13T16:12:23.231959Z"
-    },
-    "hide_input": true,
-    "init_cell": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a660fcd0dfda42448605371181e44d76",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Capital', 'Bs As', 'Catamarca', 'Chaco', 'Chub…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%matplotlib inline\n",
-    "import warnings\n",
-    "from IPython.display import HTML\n",
-    "warnings.filterwarnings('ignore')\n",
-    "import ipywidgets as widgets\n",
-    "import numpy as np\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas\n",
+    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University + Wikipedia)\n",
     "\n",
     "\n",
-    "datosar = pandas.read_csv(\"../data/casosar.csv\")\n",
-    "provincias=datosar.keys()[1:]\n",
-    "\n",
-    "def mostrar_argentina(provincia, start,end,tipoescala):\n",
-    "    fig, axs = plt.subplots(1,2,figsize=(16,8))\n",
-    "    ax = axs[0]\n",
-    "    infectados = datosar[provincia].to_numpy()\n",
-    "    nuevos = infectados[1:]-infectados[:-1]\n",
-    "    infectados = infectados[1:]\n",
-    "    dias=np.array(range(len(infectados)))+40\n",
-    "    end = max(0,min(end-41,len(dias)))\n",
-    "    start = min(len(dias),max(0,start-41))\n",
-    "    print(\"start\",start,\" end\",end)\n",
-    "    dias = dias[start:end]\n",
-    "    nuevos = nuevos[start:end]\n",
-    "    infectados = infectados[start:end]\n",
-    "    \n",
-    "    ax.plot(dias,infectados,label=provincia)\n",
-    "\n",
-    "    ax.set_title(\"Casos por región Argentina\")\n",
-    "    if tipoescala == \"log\":\n",
-    "        ax.set_yscale(\"log\")\n",
-    "    ax.legend()\n",
-    "\n",
-    "    ax= axs[1]\n",
-    "    ax.plot(dias,0*dias+21)\n",
-    "    ax.scatter(dias,np.log(2)/(nuevos/infectados),label=provincia)\n",
-    "\n",
-    "    ax.set_title(\"Tiempo de duplicación por región en Argentina\")\n",
-    "    if tipoescala == \"log\":\n",
-    "        ax.set_yscale(\"log\")\n",
-    "    ax.legend()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "######################################\n",
-    "\n",
-    "provincia = widgets.Dropdown(options=provincias,\n",
-    "    description='Region:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "startday3 =widgets.IntSlider(0,0,365,\n",
-    "    description='ajustar desde el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "endday3 =widgets.IntSlider(365,0,365,\n",
-    "    description='ajustar hasta el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "tipoescala3 = widgets.Dropdown(options=['log','linear'],\n",
-    "    description='tipo escala:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "interact=widgets.interact(mostrar_argentina,provincia=provincia,start=startday3,end=endday3,tipoescala=tipoescala3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University + Wikipedia)"
+    "La actualización de estos por país es automática, mientras que la de los casos en las provincias Argentinas debe hacerse manualmente. Por este motivo, los datos de las provincias argentinas sólo se actualizan cada cierto tiempo, de acuerdo a los reportes del ministerio de salud publicados en wikipedia (https://en.wikipedia.org/wiki/Template:COVID-19_pandemic_data/Argentina_medical_cases_by_province)."
    ]
   },
   {
@@ -144,7 +39,7 @@
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [
@@ -183,7 +78,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "countries={\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Argentina\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
+    "countries={\"Argentina\",\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
     "\n",
     "nodes = {}\n",
     "\n",
@@ -393,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -403,7 +298,22 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7eb12f048fce4922bdbd22e01114d97a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina-total', 'Argentina-Buenos Aires', 'A…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
