--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "countries={\"Argentina\",\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Uruguay\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
+    "countries={\"Argentina\",\"France\",\"Germany\",\"Schwitzeland\",\"Israel\",\"New Zealand\",\"Russia\",\"Kenya\",\"Congo (Kinshasa)\",\"Egypt\",\"Madagascar\",\"South Africa\",\"Ethiopia\",\"Australia\",\"India\",\"Korea, South\",\"Finland\",\"Norway\",\"Uruguay\",\"Venezuela\",\"Columbia\",\"Chile\",\"Brazil\",\"Bolivia\",\"Paraguay\",\"China\",\"Spain\",\"Italy\",\"United Kingdom\",\"US\",\"Sweden\"}\n",
     "\n",
     "nodes = {}\n",
     "\n",
