--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -33,16 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: divide by zero encountered in double_scalars\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -161,10 +171,13 @@
     "        # Luego, el tiempo de recuperación puedo estimarlo como el valor medio de $t$\n",
     "        # pesado con la curva de recuperados, menos el valor medio pesado con la curva de nuevos \n",
     "        # infectados.\n",
-    "        days=np.array(range(len(newrecovered)))\n",
-    "        tinc = np.dot(newrecovered,days)/np.sum(newrecovered)-np.dot(newinfecteds,days)/np.sum(newinfecteds)\n",
-    "        tinc = int(round(tinc))\n",
-    "        if tinc < 3:\n",
+    "        days = np.array(range(len(newrecovered)))\n",
+    "        try:\n",
+    "            tinc = np.dot(newrecovered,days)/np.sum(newrecovered)-np.dot(newinfecteds,days)/np.sum(newinfecteds)\n",
+    "            tinc = int(round(tinc))\n",
+    "            if tinc < 3:\n",
+    "                tinc = 12\n",
+    "        except:\n",
     "            tinc = 12\n",
     "        \n",
     "        history = np.array([np.array(range(len(data_infected))),data_infected]).transpose()\n",
@@ -288,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -298,22 +311,7 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eb12f048fce4922bdbd22e01114d97a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Argentina-total', 'Argentina-Buenos Aires', 'A…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
@@ -391,31 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
      "start_time": "2020-08-13T16:57:13.780115Z"
     },
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd987587ec404ef480a313d723bc4d83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Argentina-total', 'Argentina-Buenos Aires', 'A…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -488,7 +471,7 @@
  "metadata": {
   "celltoolbar": "Initialization Cell",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
