--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -39,7 +39,7 @@
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
    "outputs": [
@@ -49,8 +49,8 @@
      "text": [
       "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: divide by zero encountered in true_divide\n",
       "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: invalid value encountered in true_divide\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: divide by zero encountered in double_scalars\n"
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: invalid value encountered in double_scalars\n"
      ]
     },
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -311,7 +311,22 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b7fc4344fc4c47babe8a4bf692e2f8c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
@@ -320,7 +335,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "region = widgets.Dropdown(options=[key for key in nodes],\n",
+    "region = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
     "    description='Region:',\n",
     "    ensure_option=True,\n",
     "    disabled=False)\n",
@@ -389,16 +404,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
      "start_time": "2020-08-13T16:57:13.780115Z"
     },
-    "hide_input": false,
+    "hide_input": true,
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17dca492eca744e891501d607a999528",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -435,9 +465,10 @@
     "    #plt.plot(np.log(newrecovered),label=\"nuevos recuperados\")\n",
     "    #plt.plot(np.log(newdeaths),label=\"nuevos muertos\")\n",
     "    plt.title(\"Inversa de la Tasa de infección en \" + region)\n",
+    "    plt.show()\n",
     "    # plt.legend()\n",
     "    \n",
-    "region2 = widgets.Dropdown(options=[key for key in nodes],\n",
+    "region2 = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
     "    description='Region:',\n",
     "    ensure_option=True,\n",
     "    disabled=False)\n",
