--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
@@ -42,25 +42,7 @@
     "hide_input": true,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:128: RuntimeWarning: invalid value encountered in true_divide\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:112: RuntimeWarning: invalid value encountered in double_scalars\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Datos actualizados.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "import pandas\n",
@@ -159,6 +141,9 @@
     "        data_confirmed = np.array(data_infected.to_numpy()[0,4:], dtype=float)\n",
     "        data_deaths = np.array(data_deaths.to_numpy()[0,4:], dtype=float)\n",
     "        data_recovered = np.array(data_recovered.to_numpy()[0,4:], dtype=float)\n",
+    "        \n",
+    "        # From the day 559, recovered are not reported anymore. Estimate them by the infected 20 days before.\n",
+    "        data_recovered[559:]=data_confirmed[539:-20]\n",
     "        data_infected = data_confirmed - data_recovered - data_deaths\n",
     "        \n",
     "        \n",
@@ -301,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -311,22 +296,7 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7fc4344fc4c47babe8a4bf692e2f8c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
@@ -404,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -413,22 +383,7 @@
     "hide_input": true,
     "init_cell": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17dca492eca744e891501d607a999528",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
