--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -33,16 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:131: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:131: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:115: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:115: RuntimeWarning: invalid value encountered in double_scalars\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos actualizados.\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "import pandas\n",
@@ -142,8 +160,8 @@
     "        data_deaths = np.array(data_deaths.to_numpy()[0,4:], dtype=float)\n",
     "        data_recovered = np.array(data_recovered.to_numpy()[0,4:], dtype=float)\n",
     "        \n",
-    "        # From the day 559, recovered are not reported anymore. Estimate them by the infected 20 days before.\n",
-    "        data_recovered[559:]=data_confirmed[539:-20]\n",
+    "        # From the day 559, recovered are not reported anymore. Estimate them by the infected 30 days before.\n",
+    "        data_recovered[559:]=data_confirmed[529:-30]\n",
     "        data_infected = data_confirmed - data_recovered - data_deaths\n",
     "        \n",
     "        \n",
@@ -286,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -296,7 +314,22 @@
     "init_cell": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "374411e48dc14b33a3ff20c007c08389",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import matplotlib.pyplot as plt\n",
@@ -374,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -383,7 +416,22 @@
     "hide_input": true,
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -447,11 +495,81 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-13T16:57:14.242418Z",
+     "start_time": "2020-08-13T16:57:13.780115Z"
+    },
+    "hide_input": true,
+    "init_cell": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc7d3ca24bf64d97878fa51390cec783",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "\n",
+    "def mostrar_curva3(region,start,end,tipoescala):\n",
+    "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
+    "    data_death = nodes[region][\"curve_deaths\"]\n",
+    "    data_recovered = nodes[region][\"curve_recovered\"]\n",
+    "    ts = np.array(range(len(data_confirmed)))\n",
+    "    plt.plot(ts,data_confirmed)\n",
+    "    plt.plot(ts,data_recovered)\n",
+    "    plt.yscale(tipoescala)\n",
+    "    plt.ylabel(\"$T_{duplicaci\\'on}$\")\n",
+    "    plt.xlabel(\"Fecha\")\n",
+    "    #plt.plot(np.log(newrecovered),label=\"nuevos recuperados\")\n",
+    "    #plt.plot(np.log(newdeaths),label=\"nuevos muertos\")\n",
+    "    plt.title(\"Inversa de la Tasa de infección en \" + region)\n",
+    "    plt.show()\n",
+    "    # plt.legend()\n",
+    "    \n",
+    "region3 = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
+    "    description='Region:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "startday3 =widgets.IntSlider(0,0,730,\n",
+    "    description='ajustar desde el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "endday3 =widgets.IntSlider(730,0,730,\n",
+    "    description='ajustar hasta el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "tipoescala3 = widgets.Dropdown(options=['log','linear'],\n",
+    "    description='tipo escala:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "interact=widgets.interact(mostrar_curva3,region=region3,start=startday3,end=endday3,\n",
+    "                          tipoescala=tipoescala3)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
